--- a/_data/fellows/sipus-mitchell.yml
+++ b/_data/fellows/sipus-mitchell.yml
@@ -4,13 +4,15 @@ img: sipus-mitchell-headshot.jpg
 year: 2016
 hometown: "Covington, KY"
 region: South
-bio: "Specialist in the application of social science and design research to build advanced technologies for complex, unstructed problems."
+bio: "Specialist in the application of design and social science to build advanced technologies for complex problems."
 bio_full: "
-Mitchell has 15 years  of on-the-ground experience researching and designing new approaches to the world's most challenging environments. He is a specialist in social science research and technology design for complex urban environments. In 2015 he founded the machine learning and data analytics company Symkala which supplies breakthrough technologies in robotics to non-technical analysts.
+Mitchell has 15 years of on-the-ground experience researching and designing new approaches to the world's most challenging environments. He is a pioneer in the application of community level urban informatics within fragile states and developing nations. He is a cofounder of the machine learning and data analytics company Symkala which leverages breakthrough technologies from robotics to assist non-technical subject experts.
 <br><br/>
-Previously, Mitchell built organizations and pioneered technologies to upgrade refugee camps, reduce poverty in global slums, and advance education in conflict zones. From 2011-2014 was an independent advisor to the governments of Afghanistan and Somalia on conflict stabilization and urban reconstruction.  In these capacities, Mitchell has also developed novel applications of human centered design to geospatial technology and data collection. Clients have included the US Army Corps of Engineers and the US Institute of Peace with projects throughout the Middle East, North Africa, and East Africa.
+Since 2004, Mitchell has built organizations for social change and since 2007 designed new technologies to upgrade refugee camps, reduce poverty in global slums, and advance education in conflict zones. From 2011-2014 he advised the governments of Afghanistan and Somalia on conflict stabilization and urban reconstruction. During this time Mitchell created Africa's first local-level informatics systems to stabilize and rebound from conflict.  In these capacities, Mitchell developed novel applications of human centered UX Design and human computer interaction (HCI)to geospatial technology and social data collection. Additional clients have included the US Army Corps of Engineers and the US Institute of Peace with projects throughout the Middle East, North Africa, and East Africa.
 <br><br/>
-He has been also been consulted by the American Planning Association, the Urban Land Institute, and NASA  on the impact of UAVs and autonomous cars on urban design.  His work has been featured in a variety of outlets including WIRED, Popular Sciences, Forbes, and Gizmodo. Mitchell has studied and earned various degrees at Carnegie Mellon University, the University of Cincinnati, American University of Cairo, and the Art Academy of Cincinnati."
+Today Mitchell advances his expertise in Informatics, Complex Urbanism, and HCI beyond dangerous geographies. He has facilitated NASA's strategic planning for 2030 on necessary infrustructures for autonomous vehicles. He has spoken widely at institutions such as MIT, Harvard, Columbia Earth Institute,and Oxford University. His work has been featured in a variety of popular outlets including WIRED, Popular Science, Forbes, Gizmodo and publications by American Planning Association and the Urban Land Institute."
+<br><br/>
+A Fulbright Scholar (2008-2009), Mitchell has degrees in Fine Arts from the Art Academy of Cincinnati, Urban Planning & Architecture from University of Cincinnati DAAP, Forced Migration and Refugee Studies from the American University of Cairo Egypt, and is a PhD candidate at Carnegie Mellon University.
 skills:
   - ux
   - bd
